合并 v247(3fae073) 特性并修复编译错误
- 采用 v247 版本：IHookBridge/Lsp10xHookImpl/LxpHookImpl/NativeLoader/ResourcesInjector/AutomationCore/AutomationSettings 等
- 修复 signer 同名冲突：WePacketPreprocessors 的 NewSendMsgSigner/AppMsgSigner/EmojiSigner/SendPatSigner 改名 Preprocessor
- 删除 Automation 重复声明（AutomationSettings 的 data class/enum/selector/summary 与 AutomationCore 冲突）
- IHookBridge 适配：ArtHookBridge 补 apiLevel/deoptimize(Member)，删 hookBridgeName
- bsh 扩展 LocalMethodHookParam 增加 interpreter/returnType 并透传
- rhino 依赖改本地 maven-mirror 相对路径
- 编译通过：assembleStandardRelease (BUILD SUCCESSFUL)